cmake_minimum_required(VERSION 2.8)
project( camera )
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR})
find_package( OpenCV REQUIRED )
add_executable( camer camera.cpp camera.h )
target_link_libraries( camera ${OpenCV_LIBS} )
