cmake_minimum_required(VERSION 3.2)
project( cameraWrapper )
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR})
find_package( OpenCV REQUIRED )
add_executable( cameraTest cameraTest.cpp camera.cpp )
target_link_libraries( cameraTest ${OpenCV_LIBS} )
